@@ -20,6 +20,10 @@ jpmsTest {
     extraReads   = ['java.net.http']
 }
 
+tasks.named('compileTestJava') {
+    options.compilerArgs += ['--add-reads', 'dmx.fun=ALL-UNNAMED']
+}
+
 mavenPublishing {
     coordinates("codes.domix", "fun", "${project.version}")
 
